@@ -16,23 +16,32 @@ valid-environments: Valid types are: {0}.
 # Creation commands
 ## Create command
 
+world.permission-name: access
+world.permission-description: Allow access to {0}
+world.wildcard-permission-description: Allow access to all worlds.
+world.not-allowed-to-enter-world: &REDYou are not allowed to enter that world.
+
+
 ### Create command conversation
 createcommand.name: create
 createcommand.description: Create a new world.
 createcommand.permission-description: Allow users to create new worlds.
 createcommand.usage: 
-createcommand.prefix: &LIGHT_PURPLEStep {0} of 7: 
+createcommand.prefix: &LIGHT_PURPLEStep {0} of 8: 
 createcommand.prompt-world-name: &YELLOWWhat do you want to name your new world?
 createcommand.world-already-exists: A world already exists with that name. Choose another.
 createcommand.prompt-world-environment: &YELLOWChoose an environment type: &GREEN{0}
 createcommand.prompt-world-type: &YELLOWChoose a world type: &GREEN{0}
 createcommand.prompt-world-seed: &YELLOWPick a seed or type {0}: 
+createcommand.prompt-generate-structures: &YELLOWDo you want generated structures: &GREEN{0} 
 createcommand.prompt-world-generator: &YELLOWName of custom world generator plugin or type {0}:
 createcommand.prompt-world-generator-id: &YELLOWName of custom world generator id or type {0}:
 createcommand.creating-world: Creating &YELLOW{0} &GREENplease be patient... {0}
-createcommand.world-created: done!
+createcommand.world-created: done!"
 createcommand.random: random
 createcommand.none: none
+createcommand.yes: yes
+createcommand.no: no
 
 ## Load command
 loadcommand.name: load
